--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     </section>
 
     <audio controls src="keyq.wav" id="som_tecla_pom"></audio>
-    <audio controls src="sounds/keyw.wav" id="som_tecla_clap"></audio>
-    <audio controls src="sounds/keye.wav" id="som_tecla_tim"></audio>
-    <audio controls src="sounds/keya.wav" id="som_tecla_puff"></audio>
-    <audio controls src="sounds/keys.wav" id="som_tecla_splash"></audio>
-    <audio controls src="sounds/keyd.wav" id="som_tecla_toim"></audio>
-    <audio controls src="sounds/keyz.wav" id="som_tecla_psh"></audio>
-    <audio controls src="sounds/keyx.wav" id="som_tecla_tic"></audio>
-    <audio controls src="sounds/keyc.wav" id="som_tecla_tom"></audio>
+    <audio controls src="keyw.wav" id="som_tecla_clap"></audio>
+    <audio controls src="keye.wav" id="som_tecla_tim"></audio>
+    <audio controls src="keya.wav" id="som_tecla_puff"></audio>
+    <audio controls src="keys.wav" id="som_tecla_splash"></audio>
+    <audio controls src="keyd.wav" id="som_tecla_toim"></audio>
+    <audio controls src="keyz.wav" id="som_tecla_psh"></audio>
+    <audio controls src="keyx.wav" id="som_tecla_tic"></audio>
+    <audio controls src="keyc.wav" id="som_tecla_tom"></audio>
 
 </body>
 </html>
